# Mojo-Insect

./: AI_PLUGIN_STRATEGY.md  CLAUDE.md  CMakeLists.txt
.github/workflows/: build_and_test.yml
source/: InferenceEngine.cpp  InferenceEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: CMakeLists.txt  ProcessorTests.cpp
